cluster/study/trilium/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: trilium
    app.kubernetes.io/version: v0.106.0
  name: trilium
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: trilium
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: trilium
        app.kubernetes.io/version: v0.106.0
    spec:
      automountServiceAccountToken: false
      enableServiceLinks: false
      containers:
      - command:
        - node
        - ./main.mjs
        image: triliumnext/trilium:v0.106.0@sha256:be93e82699b12950ac4e2e7b565ce092fe215b8dd6ddfc47921e37b49e6a0e8b
        name: trilium
        ports:
        - containerPort: 8080
          name: http
        volumeMounts:
        - mountPath: /home/node/trilium-data
          name: data
        - mountPath: /tmp
          name: tmp
        - mountPath: /usr/src/app/public/stylesheets
          name: pennant-volume
          readOnly: true
        resources:
          requests:
            cpu: 25m
            memory: 256Mi
          limits:
            cpu: 1000m
            memory: 1Gi
        securityContext:
          capabilities:
            drop:
            - ALL
          runAsUser: 1000
          runAsGroup: 1000
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          runAsNonRoot: true
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          periodSeconds: 15
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: trilium-data-pvc
      - name: tmp
        emptyDir: {}
      - name: pennant-script-volume
        configMap:
          name: trilium-pennant
      - name: pennant-volume
        emptyDir: {}
      securityContext:
        seccompProfile:
          type: RuntimeDefault
